# sat-components-db

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: components.py  subsystems.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  component.py  subsystem.py
backend/app/schemas/: component.py  subsystem.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_components.py  0002_add_subsystems.py  0003_add_wbs_field.py  0004_add_make_buy_field.py  0004_add_part_number.py  0005_add_part_number.py  0006_ensure_make_buy.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: AddComponentForm.jsx  ComponentList.jsx  SubsystemManager.jsx
