[project]
name = "sat-components-db-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "SQLAlchemy==2.0.36",
  "psycopg[binary]==3.2.3",
  "alembic==1.14.0",
  "pydantic==2.10.3",
  "pydantic-settings==2.6.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.7",
]

